--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Spliter App",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server",
     "test": "mocha"
   },
   "repository": {
@@ -13,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.17",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "chai": "^4.2.0",
